--- a/src/styles.scss
+++ b/src/styles.scss
@@ -57,7 +57,7 @@ code {
         flex-direction: column ;
         align-items: flex-end ;
         .field-container {
-          width: 80% ;
+          width: 100% ;
           display: flex ;
           justify-content: space-between ;
           align-items: center ;
@@ -134,4 +134,16 @@ code {
   position: absolute;
   right: 25%;
   color: red;
+}
+.MuiFormControl-root.MuiTextField-root.css-i44wyl {
+  flex-direction: row-reverse;
+  flex-grow: 1;
+  justify-content: center;
+  align-items: center;
+}
+.MuiOutlinedInput-root.MuiInputBase-root.MuiInputBase-colorPrimary.Mui-disabled.MuiInputBase-formControl.css-1v4ccyo {
+  width: 50%;
+}
+.MuiOutlinedInput-input.MuiInputBase-inpuy.Mui-disabled.css-1x5jdmq {
+  flex-grow: 1;
 }
