--- a/src/styles.scss
+++ b/src/styles.scss
@@ -53,67 +53,67 @@ code {
       .radio-group {
       }
       .fields-group {
-        display: flex ;
-        flex-direction: column ;
-        align-items: flex-end ;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
         .field-container {
-          width: 100% ;
-          display: flex ;
-          justify-content: space-between ;
-          align-items: center ;
-          padding-bottom: 15px ;
-          position: relative ;
+          width: 100%;
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+          padding-bottom: 15px;
+          position: relative;
           .css-9ddj71-MuiInputBase-root-MuiOutlinedInput-root {
             flex-grow: 1;
           }
           .css-1wc848c-MuiFormHelperText-root {
-            width: 20% ;
-            color: #000 ;
-            font-size: 14px ;
+            width: 20%;
+            color: #000;
+            font-size: 14px;
           }
           .css-1wc848c-MuiFormHelperText-root.Mui-disabled {
-            color: #a3a3a3 ;
+            color: #a3a3a3;
           }
           .css-1u3bzj6-MuiFormControl-root-MuiTextField-root {
-            width: 80% ;
-            display: flex ;
-            flex-direction: row-reverse ;
-            align-items: center ;
+            width: 80%;
+            display: flex;
+            flex-direction: row-reverse;
+            align-items: center;
           }
         }
       }
       .css-u4tvz2-MuiFormLabel-root {
-        font-weight: 600 ;
-        color: #000 ;
+        font-weight: 600;
+        color: #000;
       }
     }
   }
   .btns {
-    border: 1px solid #b7b7b7  ;
-    height: 5% ;
-    border: 1px solid #b7b7b7 ;
-    height: 5% ;
-    display: flex ;
-    align-items: center ;
-    padding: 0 20px ;
+    border: 1px solid #b7b7b7;
+    height: 5%;
+    border: 1px solid #b7b7b7;
+    height: 5%;
+    display: flex;
+    align-items: center;
+    padding: 0 20px;
     .submit {
-      width: 90px ;
-      height: 35px ;
-      background: #c9f3ff ;
-      border-radius: 30px ;
-      border: none ;
-      outline: none ;
-      transition: 0.3s ;
-      margin-right: 15px ;
+      width: 90px;
+      height: 35px;
+      background: #c9f3ff;
+      border-radius: 30px;
+      border: none;
+      outline: none;
+      transition: 0.3s;
+      margin-right: 15px;
       &:hover {
-        background: darken(#c9f3ff, 10%) ;
+        background: darken(#c9f3ff, 10%);
       }
     }
     .cancel {
-      width: 90px ;
-      height: 35px ;
-      border-radius: 30px ;
-      border: 1px solid #c9f3ff ;
+      width: 90px;
+      height: 35px;
+      border-radius: 30px;
+      border: 1px solid #c9f3ff;
       background: transparent;
       outline: none;
       transition: 0.3s;
@@ -146,4 +146,18 @@ code {
 }
 .MuiOutlinedInput-input.MuiInputBase-inpuy.Mui-disabled.css-1x5jdmq {
   flex-grow: 1;
+}
+.ip-container {
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+}
+.MuiFormControl-root.css-13sljp9 {
+  width: 100%;
+}
+.MuiFormControl-root.css-13sljp9 {
+  width: 100%;
+}
+.MuiFormControl-root.css-13sljp9 {
+  width: 100%;
 }
