--- a/src/styles.scss
+++ b/src/styles.scss
@@ -161,3 +161,6 @@ code {
 .MuiFormControl-root.css-13sljp9 {
   width: 100%;
 }
+.MuiOutlinedInput-root.MuiInputBase-root.MuiInputBase-colorPrimary.MuiInputBase-formControl.css-1v4ccyo {
+  width: 50%;
+}
