--- a/src/styles.scss
+++ b/src/styles.scss
@@ -141,7 +141,8 @@ code {
   justify-content: center;
   align-items: center;
 }
-.MuiOutlinedInput-root.MuiInputBase-root.MuiInputBase-colorPrimary.Mui-disabled.MuiInputBase-formControl.css-1v4ccyo {
+.MuiOutlinedInput-root.MuiInputBase-root.MuiInputBase-colorPrimary.Mui-disabled.MuiInputBase-formControl.css-1v4ccyo,
+.MuiOutlinedInput-root.MuiInputBase-root.MuiInputBase-colorPrimary.MuiInputBase-formControl.css-1v4ccyo {
   width: 50%;
 }
 .MuiOutlinedInput-input.MuiInputBase-inpuy.Mui-disabled.css-1x5jdmq {
@@ -154,13 +155,4 @@ code {
 }
 .MuiFormControl-root.css-13sljp9 {
   width: 100%;
-}
-.MuiFormControl-root.css-13sljp9 {
-  width: 100%;
-}
-.MuiFormControl-root.css-13sljp9 {
-  width: 100%;
-}
-.MuiOutlinedInput-root.MuiInputBase-root.MuiInputBase-colorPrimary.MuiInputBase-formControl.css-1v4ccyo {
-  width: 50%;
 }
