--- a/src/styles.scss
+++ b/src/styles.scss
@@ -138,8 +138,9 @@ code {
 .MuiFormControl-root.MuiTextField-root.css-i44wyl {
   flex-direction: row-reverse;
   flex-grow: 1;
-  justify-content: center;
+  justify-content: end;
   align-items: center;
+  padding-right: 147px;
 }
 .MuiOutlinedInput-root.MuiInputBase-root.MuiInputBase-colorPrimary.Mui-disabled.MuiInputBase-formControl.css-1v4ccyo,
 .MuiOutlinedInput-root.MuiInputBase-root.MuiInputBase-colorPrimary.MuiInputBase-formControl.css-1v4ccyo {
